# ha-openai-realtime-voice

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  repository.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-addon.yml
home-assistant-voice-pe/: AGENTS.md  README.md  pyproject.toml  secrets.yaml.example  voice_pe_config.yaml
home-assistant-voice-pe/esphome/components/voice_assistant_webrtc/: .esphome_component.yml
home-assistant-voice-pe/esphome/components/voice_assistant_websocket/: .esphome_component.yml  __init__.py  voice_assistant_websocket.cpp  voice_assistant_websocket.h
home-assistant-voice-pe/sounds/: LICENSE.md  error_quota_sound.flac  ready_sound.flac  wake_sound.flac
openai_realtime_voice/: AGENTS.md  Dockerfile  README.md  config.yaml  requirements-dev.txt  requirements.txt
openai_realtime_voice/.devcontainer/: devcontainer.json
openai_realtime_voice/app/: __init__.py  audio_recorder.py  main.py
openai_realtime_voice/root/: run.sh
openai_realtime_voice/tests/: __init__.py  test_bridge.py  test_phase_decisions.py
