[tool.poetry]
name = "home-assistant-voice-pe"
version = "0.1.0"
description = "ESPHome client configuration for Home Assistant Voice PE hardware"
authors = ["Jenia Barabanov"]
readme = "INSTALLATION.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

[tool.poetry.group.dev.dependencies]
esphome = "^2025.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"





